<resources>
    <string name="app_name">Food Donation</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title1">1.3 billion tons of food are wasted every year</string>
    <string name="title2">This amounts to US$1 trillion dollars of wasted or lost food</string>
    <string name="title3">If wasted food was a country, it would be the third largest producer of carbon dioxide in the world, after the United States and China</string>
    <string name="title4">Just one quarter of all wasted food could feed the 795 million undernourished people around the world who suffer from hunger</string>
    <string name="title5">Food waste in rich countries (222 million tons) is approximately equivalent to all of the food produced in Sub-Saharan Africa (230 million tons)</string>
    <string name="title6">A European or North American consumer wastes almost 100 kilograms of food annually, which is more than his or her weight (70 kilograms)</string>
    <string name="title7">A European or North American consumer wastes 15 times more food than a typical African consumer</string>
    <string name="title8">Lack of technology and infrastructure is the main cause of food waste in Africa, as opposed to household food waste in the developed world</string>
    <string name="title9">Food waste in Europe alone could feed 200 million hungry people</string>
    <string name="title10">Food waste generates 3.3 billions tons of carbon dioxide, which accelerates global climate change</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
