<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/news_feed_pager"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="3dp"
        android:scrollbars="horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/news_feed_l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no1"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="1"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title1"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no2"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="2"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title2"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no3"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="3"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title3"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no4"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="4"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title4"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no5"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="5"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title5"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no6"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="6"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title6"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no7"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="7"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title7"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no8"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="8"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title8"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no9"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="9"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title9"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/news_feed_l10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/news_feed_no10"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="10"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/news_feed_title10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title10"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>